--- a/angular.json
+++ b/angular.json
@@ -3,37 +3,33 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-module-federation": {
+    "micro-frontend": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
-        }
+        "@schematics/angular:component": { "style": "scss" },
+        "@schematics/angular:application": { "strict": true }
       },
-      "root": "",
-      "sourceRoot": "src",
+      "root": "projects/micro-frontend",
+      "sourceRoot": "projects/micro-frontend/src",
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "ngx-build-plus:browser",
           "options": {
-            "outputPath": "dist/ng-module-federation",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
+            "outputPath": "dist/micro-frontend",
+            "index": "projects/micro-frontend/src/index.html",
+            "main": "projects/micro-frontend/src/main.ts",
+            "polyfills": "projects/micro-frontend/src/polyfills.ts",
+            "tsConfig": "projects/micro-frontend/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "projects/micro-frontend/src/favicon.ico",
+              "projects/micro-frontend/src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+            "styles": ["projects/micro-frontend/src/styles.scss"],
+            "scripts": [],
+            "extraWebpackConfig": "projects/micro-frontend/webpack.config.js",
+            "commonChunk": false
           },
           "configurations": {
             "production": {
@@ -51,11 +47,12 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "projects/micro-frontend/src/environments/environment.ts",
+                  "with": "projects/micro-frontend/src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "extraWebpackConfig": "projects/micro-frontend/webpack.prod.config.js"
             },
             "development": {
               "buildOptimizer": false,
@@ -69,39 +66,149 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "ngx-build-plus:dev-server",
+          "options": {
+            "browserTarget": "micro-frontend:build",
+            "extraWebpackConfig": "projects/micro-frontend/webpack.config.js",
+            "port": 4201,
+            "ssl": true,
+            "sslCert": "C:\\dev\\certs\\localhost-fullchain.pem",
+            "sslKey": "C:\\dev\\certs\\localhost-key.pem"
+          },
           "configurations": {
             "production": {
-              "browserTarget": "ng-module-federation:build:production"
+              "browserTarget": "micro-frontend:build:production",
+              "extraWebpackConfig": "projects/micro-frontend/webpack.prod.config.js"
             },
             "development": {
-              "browserTarget": "ng-module-federation:build:development"
+              "browserTarget": "micro-frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "ng-module-federation:build"
-          }
+          "options": { "browserTarget": "micro-frontend:build" }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "ngx-build-plus:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
+            "main": "projects/micro-frontend/src/test.ts",
+            "polyfills": "projects/micro-frontend/src/polyfills.ts",
+            "tsConfig": "projects/micro-frontend/tsconfig.spec.json",
+            "karmaConfig": "projects/micro-frontend/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "projects/micro-frontend/src/favicon.ico",
+              "projects/micro-frontend/src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": ["projects/micro-frontend/src/styles.scss"],
+            "scripts": [],
+            "extraWebpackConfig": "projects/micro-frontend/webpack.config.js"
+          }
+        }
+      }
+    },
+    "host": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": { "style": "scss" },
+        "@schematics/angular:application": { "strict": true }
+      },
+      "root": "projects/host",
+      "sourceRoot": "projects/host/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "ngx-build-plus:browser",
+          "options": {
+            "outputPath": "dist/host",
+            "index": "projects/host/src/index.html",
+            "main": "projects/host/src/main.ts",
+            "polyfills": "projects/host/src/polyfills.ts",
+            "tsConfig": "projects/host/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/host/src/favicon.ico",
+              "projects/host/src/assets"
             ],
-            "scripts": []
+            "styles": ["projects/host/src/styles.scss"],
+            "scripts": [],
+            "extraWebpackConfig": "projects/host/webpack.config.js",
+            "commonChunk": false
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/host/src/environments/environment.ts",
+                  "with": "projects/host/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all",
+              "extraWebpackConfig": "projects/host/webpack.prod.config.js"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "ngx-build-plus:dev-server",
+          "options": {
+            "browserTarget": "micro-frontend:build",
+            "extraWebpackConfig": "projects/host/webpack.config.js",
+            "port": 4200,
+            "ssl": true,
+            "sslCert": "C:\\dev\\certs\\localhost-fullchain.pem",
+            "sslKey": "C:\\dev\\certs\\localhost-key.pem"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "host:build:production",
+              "extraWebpackConfig": "projects/host/webpack.prod.config.js"
+            },
+            "development": { "browserTarget": "host:build:development" }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": { "browserTarget": "host:build" }
+        },
+        "test": {
+          "builder": "ngx-build-plus:karma",
+          "options": {
+            "main": "projects/host/src/test.ts",
+            "polyfills": "projects/host/src/polyfills.ts",
+            "tsConfig": "projects/host/tsconfig.spec.json",
+            "karmaConfig": "projects/host/karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/host/src/favicon.ico",
+              "projects/host/src/assets"
+            ],
+            "styles": ["projects/host/src/styles.scss"],
+            "scripts": [],
+            "extraWebpackConfig": "projects/host/webpack.config.js"
           }
         }
       }
